# Chatbot

./: .env  README.md  app.py  pyproject.toml  template.sh
research/: notebook_test.ipynb
src/: helper.py  prompt.py  store_index.py
